# cyber-disk-usage

./: CMakeLists.txt  README.md  backend.cpp  cyber-disk-usage.desktop  main.cpp  qml.qrc
qml/: DiskItem.qml  main.qml
translations/: de_DE.ts  en_US.ts  es_MX.ts  pl_PL.ts
